--- a/pages/vinos.html
+++ b/pages/vinos.html
@@ -2,28 +2,33 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- para la compatibilidad
+        con los navegadores antiguos o viejos-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--BS-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!--estilos-->
         <link rel="stylesheet" href="../css/style.css">
         <title>Mi proyecto</title>
     </head>
+    
     <body>
         <header class="encabezado"> 
             <img src="../assets/logo.jpg" class="logo" alt="logo del local">
             <img src="../assets/imagen-central.jpg" class="imagen-central" alt="imagen del tema">
             <img src="../assets/carrito-de-compras.jpg" class="carrito-de-compras" alt="compras">
             <button class="boton">ir al carrito</button>
-        <h1> MM Licores </h1>
+            <h1> MM Licores </h1>    
         </header>
-        <main>
-            <h2 class="contacto">Contacto</h2>
-            <a href="http:/index.html">
-                volver a menu
-            </a>            
-        </main>  
+        <nav class="mnav">
+            <li><a href="../pages/cervezas.html"><p>Cervezas</p></a></li>            
+            <li><a href="../pages/vinos.html"><p> Vinos</p></a></li>                
+            <li><a href="../pages/destilados.html"><p> Destilados</p></a></li>
+            <li><a href="../pages/energizantes.html"><p> Energizantes</p></a></li>
+            <li><a href="../pages/gaseosas.html"><p>Gaseosas</p></a></li>
+            <li><a href="../pages/Agua_y_tonicas.html"><p>Agua y Tonicas</p></a>
+        </nav>
         <footer class="piecontenedor">
             <div class="pie">
                 <a href="../pages/contacto.html">
@@ -53,12 +58,13 @@
                     referrerpolicy="no-referrer-when-downgrade"> </iframe>
             </div>
         </footer>
+        </div>
         <!--BS-->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+            integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+            crossorigin="anonymous"></script>
     </body>
 </html>
