--- a/pages/cervezas.html
+++ b/pages/cervezas.html
@@ -39,9 +39,9 @@
                     <p>Cerveza rubia con cuerpo y carácter maltoso. Aroma leve a lúpulo, cereal y toque de levadura........................................$800</p>
                 <li> Andes Roja <img class="a2" src="../assets/andes-roja.jpg" alt="cerveza roja"> </li>
                     <p>Cerveza que te ofrece un sabor único y auténtico con una graduación alcohólica de 5.1%..............................................$800</p>
-                <li> Andes IPA <img class="a3" src="../assets/andes-IPA.jpg" alt="ipa"> </li>
+                <li> Andes IPA <img class="a3" src="../assets/andes-ipa.jpg" alt="ipa"> </li>
                     <p>Cerveza que se caracteriza por el amargor que le otorga su alto contenido de lúpulo. La IPA Andina contiene uva mendocina...........$1000</p>
-                <li> Andes IPA roja <img class="a4" src="../assets/andes-IPA-roja.jpeg" alt="ipa roja"> </li>
+                <li> Andes IPA roja <img class="a4" src="../assets/andes-ipa-roja.jpeg" alt="ipa roja"> </li>
                     <p>Esta IPA Roja es una cerveza de alto amargor, con un aroma lupulado y notas herbales y frutales.....................................$1000</p>
             </ul>    
         </section>
