--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!--estilos-->
         <link rel="stylesheet" href="../css/style.css">
-        <title>Mi proyecto</title>
+        <title>Contacto</title>
     </head>
     <body>
         <header class="encabezado"> 
@@ -18,12 +18,18 @@
             <button class="boton">ir al carrito</button>
         <h1> MM Licores </h1>
         </header>
-        <main>
-            <h2 class="contacto">Contacto</h2>
-            <a href="http:/index.html">
-                volver a menu
-            </a>            
-        </main>  
+        <nav class="mnav">
+            <li><a href="../pages/cervezas.html"><p>Cervezas</p></a></li>            
+            <li><a href="../pages/vinos.html"><p> Vinos</p></a></li>                
+            <li><a href="../pages/destilados.html"><p> Destilados</p></a></li>
+            <li><a href="../pages/energizantes.html"><p> Energizantes</p></a></li>
+            <li><a href="../pages/gaseosas.html"><p>Gaseosas</p></a></li>
+            <li><a href="../pages/Agua_y_tonicas.html"><p>Agua y Tonicas</p></a>
+        </nav>
+        <h2 class="mcerv">Contacto</h2>
+        <a href="http:/index.html">
+            volver a menu
+        </a>
         <footer class="piecontenedor">
             <div class="pie">
                 <a href="../pages/contacto.html">
