--- a/pages/vinos.html
+++ b/pages/vinos.html
@@ -10,7 +10,7 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!--estilos-->
         <link rel="stylesheet" href="../css/style.css">
-        <title>Mi proyecto</title>
+        <title>Vinos</title>
     </head>
     
     <body>
@@ -29,6 +29,10 @@
             <li><a href="../pages/gaseosas.html"><p>Gaseosas</p></a></li>
             <li><a href="../pages/Agua_y_tonicas.html"><p>Agua y Tonicas</p></a>
         </nav>
+        <h2 class="mcerv">Vinos</h2>
+        <a href="http:/index.html">
+            volver a menu
+        </a>
         <footer class="piecontenedor">
             <div class="pie">
                 <a href="../pages/contacto.html">
